Improve upstart config
Add support of sending e-mail with logs then mstation stops.

--- a/config/mstation.conf
+++ b/config/mstation.conf
@@ -5,6 +5,23 @@ start on runlevel [2345]
 stop on runlevel [!2345]
 
 respawn
-respawn limit 10 120
+respawn limit 1000 360
+
+pre-start script
+	until ntpq -np | grep -q '^\*';
+	do
+		echo "NTP not ready... wait"
+		sleep 30
+	done
+end script
 
 exec /usr/local/MStation/mstation_serv.py
+
+post-start script
+	echo "MStation daemon started"
+	date
+end script
+
+post-stop script
+	mpack -a -s "MStaion stopped" -d /var/log/upstart/mstation.log /var/log/mstation.log <your e-mail>
+end script
